# dev-playbook

./: .gitignore  CLAUDE.md  README.md
.claude/skills/triage/: SKILL.md
dotfiles/: CLAUDE.md  README.md
dotfiles/.agents/: .skill-lock.json
dotfiles/.claude/: settings.json
dotfiles/.claude/rules/: marimo.md
dotfiles/.claude/skills/commit-push/: SKILL.md
dotfiles/.claude/skills/dev-tools-issues/: SKILL.md
dotfiles/.claude/skills/dev-tools-repo-sync/: SKILL.md
dotfiles/.claude/skills/flag/: SKILL.md
dotfiles/.claude/skills/idd-work/: SKILL.md
dotfiles/.claude/skills/ideas/: SKILL.md
dotfiles/.claude/skills/orient/: SKILL.md
dotfiles/.claude/skills/orient-workspace-meta/: SKILL.md
dotfiles/.claude/skills/sdd-design/: SKILL.md
dotfiles/.claude/skills/sdd-func-reqs/: SKILL.md
dotfiles/.claude/skills/sdd-green/: SKILL.md
dotfiles/.claude/skills/sdd-red/: SKILL.md
dotfiles/.claude/skills/sdd-trace/: SKILL.md
dotfiles/.dhub/: .version_cache.json
flagged_backlog/: log.jsonl
ideas/: README.md
project-template/: CLAUDE.md  README.md  cookiecutter.json
project-template/hooks/: post_gen_project.py  pre_gen_project.py
project-template/{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
project-template/{{ cookiecutter.project_slug }}/.claude/: settings.json
project-template/{{ cookiecutter.project_slug }}/.github/workflows/: ci.yml
standards/: README.md  development-workflow.md  repo-documentation.md  spec-driven-development.md
(+3 files in other folders)
