[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
requires-python = ">={{ cookiecutter.python_version }}"
authors = [{ name = "{{ cookiecutter.author_name }}" }]
dependencies = []

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
]
{% if 'package' in cookiecutter.project_layout %}
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.package_name }}"]
{% endif %}
[tool.ruff]
target-version = "py{{ cookiecutter.python_version | replace('.', '') }}"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["{{ cookiecutter.package_name }}"]

[tool.mypy]
python_version = "{{ cookiecutter.python_version }}"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
disable_error_code = ["import-untyped"]
